# spin-trigger-plugins

./: .gitignore  Cargo.toml  MAINTAINERS.md  README.md  RELEASE.md  cron.wit  spin-pluginify.toml  sqs3.wit
.cargo/: audit.toml
.github/workflows/: build.yaml  build.yml  ci.yml  e2e.yml  release-command.yml  release-cron.yml  release-mqtt.yml  release-sqs.yml  release-trigger.yml
crates/trigger-command/: .spin-plugin.json.tmpl  Cargo.toml  README.md  release-process.md  spin-pluginify.toml
crates/trigger-command/.cargo/: audit.toml
crates/trigger-command/.github/workflows/: build.yaml  e2e.yml
crates/trigger-command/examples/async/: .gitignore  README.md
crates/trigger-command/examples/async/src/: lib.rs
crates/trigger-command/examples/hello-world/: Cargo.toml
crates/trigger-command/src/: lib.rs  main.rs
crates/trigger-command/test/: e2e.sh
crates/trigger-cron/: .spin-plugin.json.tmpl  Cargo.toml  README.md  release-process.md  spin-pluginify.toml
crates/trigger-cron/guest-python/: app.py
crates/trigger-cron/sdk/: Cargo.toml
crates/trigger-cron/sdk/macro/: Cargo.toml
crates/trigger-cron/sdk/macro/src/: lib.rs
crates/trigger-cron/src/: main.rs
crates/trigger-cron/templates/cron-rust/content/: Cargo.toml.tmpl  spin.toml
crates/trigger-mqtt/: .spin-plugin.json.tmpl  Cargo.toml  Makefile  README.md  release-process.md  spin-mqtt.wit  spin-pluginify.toml
crates/trigger-mqtt/.devcontainer/: bootstrap.sh
crates/trigger-mqtt/docs/: plugin-development.md
crates/trigger-mqtt/examples/mqtt-app/: spin.toml
crates/trigger-mqtt/sdk/: Cargo.toml
crates/trigger-mqtt/sdk/macro/: Cargo.toml
crates/trigger-mqtt/sdk/macro/src/: lib.rs
crates/trigger-mqtt/sdk/src/: lib.rs
crates/trigger-mqtt/src/: lib.rs  main.rs
crates/trigger-mqtt/templates/mqtt-rust/content/: Cargo.toml.tmpl
crates/trigger-sqs/: .spin-plugin.json.tmpl  Cargo.toml  README.md  spin-pluginify.toml
crates/trigger-sqs/.github/workflows/: build.yml
crates/trigger-sqs/guest/src/: lib.rs
examples/command-rust-guest-async/: spin.toml
examples/command-rust-guest-hello/: spin.toml
examples/command/async/: Cargo.toml
examples/cron-rust-guest/src/: lib.rs
guest/: Cargo.toml
guest-python/: README.md  app.py  requirements.txt  spin.toml
guest-rust/: Cargo.toml  spin.toml
scripts/: release.sh
sdk/: Cargo.toml
sdk/macro/src/: lib.rs
sdk/src/: lib.rs
src/: lib.rs
templates/command-rust/content/: Cargo.toml.tmpl  spin.toml
templates/command/command-rust/metadata/snippets/: component.txt
templates/cron-rust/metadata/snippets/: component.txt
templates/cron/cron-rust/content/: Cargo.toml.tmpl
templates/mqtt-rust/content/: spin.toml
templates/mqtt/mqtt-rust/content/: Cargo.toml.tmpl
