[package]
name = "trigger-cron"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[workspace.package]
version = "0.4.0"
authors = ["The Spin authors"]
edition = "2021"
rust-version = "1.90"

[workspace]
members = ["sdk", "sdk/macro"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
clap = { version = "3.1.15", features = ["derive", "env"] }
serde = "1.0"
spin-factors = { git = "https://github.com/spinframework/spin", tag = "v3.6.0" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", tag = "v3.6.0" }
spin-trigger = { git = "https://github.com/spinframework/spin", tag = "v3.6.0" }
tokio = { version = "1.37", features = ["full"] }
tokio-cron-scheduler = "0.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
wasmtime = { version = "41.0.0" }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

[workspace.dependencies]
wit-bindgen = "0.51.0"
