[package]
name = "trigger-cron"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[workspace.package]
version = "0.4.2"
authors = ["The Spin authors"]
edition = "2021"
rust-version = "1.91"

[workspace]
members = ["sdk", "sdk/macro"]

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde = "1.0"
spin-factors = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
spin-trigger = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
tokio = { version = "1.37", features = ["full"] }
tokio-cron-scheduler = "0.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
wasmtime = { version = "43" }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

[workspace.dependencies]
wit-bindgen = "0.54.0"
