[package]
name = "trigger-command"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
spin-trigger = { workspace = true }
spin-core = { workspace = true }
spin-telemetry = { workspace = true }
spin-factors = { workspace = true }
spin-factor-wasi = { workspace = true }
spin-runtime-factors = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
wasmtime-wasi = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { workspace = true }
