[package]
name = "trigger-cron"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
spin-factors = { workspace = true }
spin-runtime-factors = { workspace = true }
spin-trigger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmtime = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { workspace = true }
