[package]
name = "trigger-mqtt"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
spin-app = { workspace = true }
spin-core = { workspace = true }
spin-expressions = { workspace = true }
spin-factors = { workspace = true }
spin-runtime-factors = { workspace = true }
spin-trigger = { workspace = true }
spin-telemetry = { workspace = true }
spin-factor-variables = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
paho-mqtt = { workspace = true }
wasmtime = { workspace = true }
