[package]
name = "trigger-sqs"
version = "0.13.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }
# Explicitly one of "aws-lc-rs" or "ring" is required for rustls. Our other dependencies require "ring", so we specify that here.
rustls = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
spin-core = { workspace = true }
spin-factors = { workspace = true }
spin-runtime-factors = { workspace = true }
spin-telemetry = { workspace = true }
spin-trigger = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time", "signal"] }
tokio-scoped = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { workspace = true }
