[package]
name = "spin-cron-sdk"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include = ["../cron.wit"]

[lib]
name = "spin_cron_sdk"

[dependencies]
spin-cron-macro = { path = "macro" }
wit-bindgen = { workspace = true }
