[package]
name = "spin-mqtt-sdk"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
include = ["../spin-mqtt.wit"]

[lib]
name = "spin_mqtt_sdk"

[dependencies]
spin-mqtt-macro = { path = "macro" }
wit-bindgen = { workspace = true }
