[package]
name = "spin-cron-macro"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include = ["../../cron.wit"]

[lib]
name = "spin_cron_macro"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
