[package]
name = "spin-mqtt-macro"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
include = ["../../spin-mqtt.wit"]

[lib]
name = "spin_mqtt_macro"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
wit-bindgen = { workspace = true }
